# automatic_parking

./: README.md
auto_dock/: CMakeLists.txt  package.xml
auto_dock/launch/: auto_dock.launch  nb_1.launch
auto_dock/src/: controller.cpp  pattern.cpp
model/dock1/: model.config  model.sdf
model/dock2/: model.config  model.sdf
